# update-mgmt-acl

./: .gitignore  .gitmodules  README.md  acl_input_data.yml  nornir_inv.py  nornir_tasks.py  pyproject.toml  requirements.txt  update_mgmt_acl.py
templates/: cfg_acl_tmpl.j2
